# majestic-brain-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
gbrain/: __init__.py  extractor.py  plugin.yaml  store.py
majestic_brain/: __init__.py  extractor.py  plugin.yaml  store.py
scripts/: migrate_from_gbrain.py  migrate_legacy_db.py
tests/: conftest.py  test_compatibility.py  test_gbrain_plugin.py  test_majestic_brain_plugin.py
