[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-majestic-brain-plugin"
version = "0.3.1"
description = "Majestic Brain — local SQLite/FTS5 note store with deterministic entity extraction, content-hash dedup, and provenance tracking for Hermes Agent. Primary name: majestic-brain."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nous Research" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No runtime dependencies — stdlib only.

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["majestic_brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
